--- a/src/scss/frontend/components/classes/_common.scss
+++ b/src/scss/frontend/components/classes/_common.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Frontend Styles
+// Common Frontend Styles
 //
-// Includes all Frontend common styles.
+// Includes all Frontend classes that can be used anywhere.
 ////////////////////////////////////////////////////////////////////////////////
 
 /* Table */
