--- a/src/scss/frontend/global/_variables.scss
+++ b/src/scss/frontend/global/_variables.scss
@@ -1,5 +1,5 @@
 ////////////////////////////////////////////////////////////////////////////////
-// Framework Variables (v3.0.1)
+// Framework Variables (v3.2.0)
 //
 // All framework pre-packaged variables.
 //
@@ -16,27 +16,37 @@ $global-width-small:       728px                                       !default;
 $global-width-medium:      1200px                                      !default; // Desktop & up
 $global-width-large:       1400px                                      !default; // Large screens & up
 
-$global-font-size:         16px                                        !default; // Mobile
+$rem-base:                 16px                                        !default;
+
+$global-font-size:         $rem-base                                   !default; // Mobile
 $global-font-size-small:   $global-font-size                           !default; // Tablet & up
 $global-font-size-medium:  $global-font-size-small                     !default; // Desktop & up
 $global-font-size-large:   $global-font-size-medium                    !default; // Large screens & up
-
-$rem-base:                 $global-font-size                           !default;
 
 $global-lineheight:         1.3                                        !default; // Mobile
 $global-lineheight-small:   $global-lineheight                         !default; // Tablet & up
 $global-lineheight-medium:  $global-lineheight-small                   !default; // Desktop & up
 $global-lineheight-large:   $global-lineheight-medium                  !default; // Large screens & up
 
-$primary-color:            #00b282                                     !default;
-$secondary-color:          #0093bb                                     !default;
+$global-weight-light:      300                                         !default;
+$global-weight-normal:     400                                         !default;
+$global-weight-medium:     500                                         !default;
+$global-weight-semibold:   600                                         !default;
+$global-weight-bold:       700                                         !default;
 
-$success-color:            #009900                                     !default;
-$warning-color:            #ffae00                                     !default;
-$alert-color:              #ce3e3e                                     !default;
-$info-color:               #0058b2                                     !default;
+$global-margin:            30px                                        !default;
+$global-padding:           30px                                        !default;
+$global-outline:           none                                        !default;
+$global-radius:            3px                                         !default;
+$global-text-direction:    ltr                                         !default;
+$global-transition-timing: .2s                                         !default;
+$global-box-sizing:        border-box                                  !default;
 
-$white:                    #f9f9f9                                     !default;
+
+// 2. Colors
+// -----------------------------------------------------------------------------
+
+$white:                    #fff                                        !default;
 $black:                    #000                                        !default;
 
 $xlight-gray:              #f0f0f0                                     !default;
@@ -46,28 +56,21 @@ $medium-gray:              #b4b4b4                                     !default;
 $dark-gray:                #686868                                     !default;
 $xdark-gray:               #231e20                                     !default;
 
+$primary-color:            #00b282                                     !default;
+$secondary-color:          #0093bb                                     !default;
+
+$success-color:            #009900                                     !default;
+$warning-color:            #ffae00                                     !default;
+$alert-color:              #ce3e3e                                     !default;
+$info-color:               #0058b2                                     !default;
+
+/* Body */
+
 $body-background:          $white                                      !default;
 $body-font-color:          $dark-gray                                  !default;
-$body-font-family:         "Trebuchet MS", Helvetica, sans-serif       !default;
-$body-antialiased:         true                                        !default;
-
-$global-margin:            30px                                        !default;
-$global-padding:           30px                                        !default;
-
-$global-weight-light:      300                                         !default;
-$global-weight-normal:     400                                         !default;
-$global-weight-medium:     500                                         !default;
-$global-weight-semibold:   600                                         !default;
-$global-weight-bold:       700                                         !default;
-
-$global-outline:           none                                        !default;
-$global-radius:            3px                                         !default;
-$global-text-direction:    ltr                                         !default;
-$global-transition-timing: .2s                                         !default;
-$global-box-sizing:        border-box                                  !default;
 
 
-// 2. Grid
+// 3. Grid
 // -----------------------------------------------------------------------------
 
 $num-columns:        1                                                 !default; // Mobile & up
@@ -89,7 +92,7 @@ $global-right: if($global-text-direction == rtl, left, right)          !default;
 
 
 
-// 3. Breakpoints
+// 4. Breakpoints
 // -----------------------------------------------------------------------------
 
 $small:        $global-width-small + $gutter-padding-small             !default; // Tablet & up
@@ -101,10 +104,14 @@ $medium-down:  0px $medium                                             !default;
 $large-down:   0px $large                                              !default; // Large screens
 
 
-// 4. Base Typography
+// 5. Base Typography
 // -----------------------------------------------------------------------------
 
+$body-font-family:         "Trebuchet MS", Helvetica, sans-serif       !default;
 $font-family-monospace:    "Courier New", Courier, monospace           !default;
+$body-antialiased:         true                                        !default;
+
+/* Header (h1, h2, h3, etc.) */
 
 $header-font-family:       Arial, Helvetica, sans-serif                !default;
 $header-font-weight:       $global-weight-bold                         !default;
@@ -117,14 +124,49 @@ $header-text-rendering:    optimizeLegibility                          !default;
 $header-small-font-color:  $dark-gray                                  !default;
 $header-letter-spacing:    normal                                      !default;
 
-// These should not be used to define sizes within stylesheets. Instead, use the
-// font sizes defined in the next section below.
+/**
+ * Header Font Sizes
+ *
+ * These should not be used to define sizes within stylesheets. Instead, use the
+ * font sizes defined in the next section below.
+ */
+
 $header-1-size:            rem-calc($global-font-size + 35)            !default;
 $header-2-size:            rem-calc($global-font-size + 28)            !default;
 $header-3-size:            rem-calc($global-font-size + 21)            !default;
 $header-4-size:            rem-calc($global-font-size + 14)            !default;
 $header-5-size:            rem-calc($global-font-size + 7)             !default;
 $header-6-size:            rem-calc($global-font-size)                 !default;
+
+// Tablet & up
+$header-1-size-small:            rem-calc($global-font-size-small + 35) !default;
+$header-2-size-small:            rem-calc($global-font-size-small + 28) !default;
+$header-3-size-small:            rem-calc($global-font-size-small + 21) !default;
+$header-4-size-small:            rem-calc($global-font-size-small + 14) !default;
+$header-5-size-small:            rem-calc($global-font-size-small + 7)  !default;
+$header-6-size-small:            rem-calc($global-font-size-small)     !default;
+
+// Desktop & up
+$header-1-size-medium:            rem-calc($global-font-size-medium + 35) !default;
+$header-2-size-medium:            rem-calc($global-font-size-medium + 28) !default;
+$header-3-size-medium:            rem-calc($global-font-size-medium + 21) !default;
+$header-4-size-medium:            rem-calc($global-font-size-medium + 14) !default;
+$header-5-size-medium:            rem-calc($global-font-size-medium + 7)  !default;
+$header-6-size-medium:            rem-calc($global-font-size-medium)   !default;
+
+// Large screens
+$header-1-size-large:            rem-calc($global-font-size-large + 35) !default;
+$header-2-size-large:            rem-calc($global-font-size-large + 28) !default;
+$header-3-size-large:            rem-calc($global-font-size-large + 21) !default;
+$header-4-size-large:            rem-calc($global-font-size-large + 14) !default;
+$header-5-size-large:            rem-calc($global-font-size-large + 7)  !default;
+$header-6-size-large:            rem-calc($global-font-size-large)     !default;
+
+/**
+ * Font Sizes
+ *
+ * Use these variables when targeting element font sizes.
+ */
 
 $xxxlarge-font-size:    $header-1-size                                 !default;
 $xxlarge-font-size:     $header-2-size                                 !default;
@@ -153,9 +195,9 @@ $anchor-color-hover:           scale-color($anchor-color, $lightness: -50%) !def
 $anchor-text-decoration:       none                                    !default;
 $anchor-text-decoration-hover: underline                               !default;
 
-$hr-width:  100%                                                       !default;
+$hr-width:  50%                                                        !default;
 $hr-border: rem-calc(1) solid $gray                                    !default;
-$hr-margin: rem-calc($global-margin) auto                              !default;
+$hr-margin: rem-calc($global-margin * 2) auto                          !default;
 
 $list-lineheight:             $paragraph-lineheight                    !default;
 $list-margin-bottom:          $paragraph-margin-bottom                 !default;
@@ -172,9 +214,9 @@ $blockquote-padding:          rem-calc($global-padding)                !default;
 $blockquote-margin:           rem-calc($global-margin 0)               !default;
 $blockquote-border:           rem-calc(5) solid $gray                  !default;
 $blockquote-font-family:      $header-font-family                      !default;
-$blockquote-font-size:        $large-font-size                         !default;
+$blockquote-font-size:        $medium-font-size                        !default;
 $blockquote-line-height:      inherit                                  !default;
-$blockquote-background:       $xlight-gray                             !default;
+$blockquote-background:       transparent                              !default;
 
 $cite-font-size:              $small-font-size                         !default;
 $cite-color:                  $dark-gray                               !default;
@@ -188,12 +230,12 @@ $keystroke-radius:            rem-calc($global-radius)                 !default;
 $abbr-underline:              rem-calc(1) dotted $black                !default;
 
 
-// 5. Forms
+// 6. Forms
 // -----------------------------------------------------------------------------
 
 $fieldset-border:         rem-calc(1) solid $gray                      !default;
 $fieldset-padding:        rem-calc($global-padding)                    !default;
-$fieldset-margin:         rem-calc($global-margin)                     !default;
+$fieldset-margin:         rem-calc($global-margin 0)                   !default;
 $legend-padding:          rem-calc(5)                                  !default;
 $form-spacing:            rem-calc(20)                                 !default;
 $helptext-color:          $gray                                        !default;
@@ -205,10 +247,10 @@ $input-prefix-border:     rem-calc(1) solid $gray                      !default;
 $input-prefix-padding:    rem-calc($global-padding)                    !default;
 
 $form-label-color:          $black                                     !default;
-$form-label-font-size:      $small-font-size                           !default;
+$form-label-font-size:      $normal-font-size                          !default;
 $form-label-font-weight:    $global-weight-bold                        !default;
 $form-label-line-height:    1.8                                        !default;
-$form-label-font-family:    $body-font-family                          !default;
+$form-label-font-family:    $header-font-family                        !default;
 $form-label-text-transform: none                                       !default;
 
 $select-background:       $body-background                             !default;
@@ -234,11 +276,11 @@ $input-number-spinners: true                                           !default;
 $input-radius:          rem-calc($global-radius)                       !default;
 
 $placeholder-color:          $gray                                     !default;
-$placeholder-font-family:    $input-font-family                        !default;
+$placeholder-font-family:    $header-font-family                       !default;
 $placeholder-text-transform: none                                      !default;
 
 
-// 6. Table
+// 7. Table
 // -----------------------------------------------------------------------------
 
 $table-background:         $white                                      !default;
@@ -252,14 +294,14 @@ $table-foot-background:    smart-scale($table-background, $table-color-scale) !d
 $table-head-font-color:    $body-font-color                            !default;
 
 
-// 7. Frontend
+// 8. Frontend
 // -----------------------------------------------------------------------------
 
 $pager-text-transform: uppercase                                       !default;
 $pager-transition:     all $global-transition-timing                   !default;
 $pager-text-align:     center                                          !default;
 
-$pager-link-padding:       0.5rem 0.9rem                               !default;
+$pager-link-padding:       rem-calc(8 10)                              !default;
 $pager-link-border:        0                                           !default;
 $pager-link-border-radius: rem-calc($global-radius)                    !default;
 $pager-link-color:         $black                                      !default;
@@ -272,31 +314,34 @@ $pager-link-background-hover: transparent                              !default;
 $pager-link-color-hover:      $primary-color                           !default;
 $pager-link-border-hover:     0                                        !default;
 
-$pager-current-padding:       0.5rem 0.9rem                            !default;
+$pager-current-padding:       rem-calc(8 10)                           !default;
 $pager-current-border:        rem-calc(1) solid $gray                  !default;
 $pager-current-border-radius: rem-calc($global-radius)                 !default;
-$pager-current-color:         $body-font-color                         !default;
-$pager-current-background:    transparent                              !default;
+$pager-current-color:         $white                                   !default;
+$pager-current-background:    $xdark-gray                              !default;
 
-$pager-ellipsis-padding:       0.5rem 0.9rem                           !default;
+$pager-ellipsis-padding:      rem-calc(8 10)                           !default;
 $pager-ellipsis-border:        0                                       !default;
 $pager-ellipsis-border-radius: rem-calc($global-radius)                !default;
 $pager-ellipsis-color:         $body-font-color                        !default;
 $pager-ellipsis-background:    transparent                             !default;
 
-$button-radius:           0                                            !default;
-$button-background:       $white                                       !default;
-$button-background-hover: $xdark-gray                                  !default;
-$button-font-size:        $normal-font-size                            !default;
-$button-line-height:      1                                            !default;
-$button-padding:          rem-calc(20 40)                              !default;
-$button-color:            $xdark-gray                                  !default;
-$button-color-hover:      $white                                       !default;
-$button-border:           rem-calc(1) solid $xdark-gray                !default;
-$button-border-hover:     rem-calc(1) solid $xdark-gray                !default;
-$button-font-family:      $body-font-family                            !default;
-$button-text-transform:   none                                         !default;
-$button-font-weight:      $global-weight-bold                          !default;
+$button-radius:              rem-calc($global-radius)                  !default;
+$button-background:          $white                                    !default;
+$button-background-hover:    $xdark-gray                               !default;
+$button-font-size:           $normal-font-size                         !default;
+$button-line-height:         1                                         !default;
+$button-padding:             rem-calc(20 40)                           !default;
+$button-color:               $xdark-gray                               !default;
+$button-color-hover:         $white                                    !default;
+$button-border:              rem-calc(1) solid $xdark-gray             !default;
+$button-border-hover:        rem-calc(1) solid $xdark-gray             !default;
+$button-font-family:         $body-font-family                         !default;
+$button-text-transform:      none                                      !default;
+$button-font-weight:         $global-weight-bold                       !default;
+$button-background-disabled: $gray                                     !default;
+$button-color-disabled:      $dark-gray                                !default;
+$button-border-disabled:     rem-calc(1) solid $gray                   !default;
 
 $site-header-border-bottom:   rem-calc(1) solid $gray                  !default;
 $site-header-padding-top:     rem-calc($global-padding / 2)            !default;
@@ -305,8 +350,15 @@ $site-header-margin-bottom:   rem-calc($global-margin)                 !default;
 $site-header-background:      $body-background                         !default;
 
 $callout-background:     rgba($info-color, .3)                         !default;
+$callout-margin:         rem-calc(0 0 $global-margin 0)                !default;
 $callout-padding:        rem-calc($global-padding)                     !default;
 $callout-border:         rem-calc(1) solid rgba($info-color, .2)       !default;
 $callout-color:          $info-color                                   !default;
 $callout-radius:         rem-calc($global-radius)                      !default;
+
+
+// 9. Custom variables
+// -----------------------------------------------------------------------------
+
+@import 'variables-custom';
 
